--- a/Game_Culminating_MansivA/Resource1.resx
+++ b/Game_Culminating_MansivA/Resource1.resx
@@ -118,22 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="LightStonePlatform" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\LightStonePlatform.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LightRuinStone" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\LightRuinStone.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="LightStoneWall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\LightStoneWall.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="RuinsBg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\RuinsBg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="LightStonePlatform1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\LightStonePlatform.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="LightStonePlatformImproved" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\LightStonePlatformImproved.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LightStonePlatformLong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\LightStonePlatformLong.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
