--- a/Game_Culminating_MansivA/Resource1.resx
+++ b/Game_Culminating_MansivA/Resource1.resx
@@ -130,4 +130,19 @@
   <data name="LightStonePlatformLong" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\LightStonePlatformLong.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BlueKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\BlueKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CyanKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CyanKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ExtraScore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ExtraScore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RedKey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\RedKey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Spike" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Spike.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
