--- a/Game_Culminating_MansivA/Resource1.resx
+++ b/Game_Culminating_MansivA/Resource1.resx
@@ -145,4 +145,19 @@
   <data name="Spike" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Spike.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FallingTrap" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\FallingTrap.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HealthPotion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HealthPotion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Lava" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Lava.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Lever" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Lever.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WoodenCrate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\WoodenCrate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
