--- a/Game_Culminating_MansivA/Resource1.resx
+++ b/Game_Culminating_MansivA/Resource1.resx
@@ -160,4 +160,10 @@
   <data name="WoodenCrate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\WoodenCrate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UpsideDownSpike" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Spike2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FlippedLever" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\FlippedLever.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
